# tg_youtube_quizz_bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: bot.py  config.py  quiz_engine.py  session.py  subtitles.py
